--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,15 @@
 #root {
   max-width: 1280px;
   width: 100%;
+  height: 90vh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: white;
+  -webkit-box-shadow: 10px 10px 40px 6px rgba(255,255,255,0.55);
+  -moz-box-shadow: 10px 10px 40px 6px rgba(255,255,255,0.55);
+  box-shadow: 10px 10px 40px 6px rgba(255,255,255,0.55);
+  /*background-image: url('../../assets/triangles_pattern.webp');*/
 }
 
 .App
