--- a/src/components/Column/Column.css
+++ b/src/components/Column/Column.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 3px;
+    min-height: 100%;
 }
 
 .tasks
@@ -23,7 +24,7 @@
     width: 315px;
     border-radius: 8px;
     background: #232323;
-    height: 600px;
+    min-height: 100%;
     cursor: pointer;
 }
 
