--- a/src/components/Kanban/Kanban.css
+++ b/src/components/Kanban/Kanban.css
@@ -1,6 +1,9 @@
 .kanban_main_container__div
 {
     width: 100%;
+    height: 78vh;
     display: flex;
     flex-direction: row;
+    overflow-y: scroll;
+    overflow-x: hidden !important;
 }
